--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,6 +1,6 @@
 .van-nav-bar {
   background-color: #0096fa;
-  .van-nav-bar__title {
+  .van-nav-bar__title, .van-nav-bar__text, .van-icon {
     color:#fff
   }
 }
